2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/html.lang:
	* gtksourceview/language-specs/php.lang:

	Detect html inside php and viceversa. Patch by Eric Norige,
	fixes remaining part of bug #448513.

2007-08-27  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.c: rise the max value for the
	max-undo-levels property and allow -1 to mean 'no limit'.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/oblivion.lang: add oblivion style
	scheme so that we have one dark scheme included.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/erlang.lang: erlang syntax.

2007-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguagemanager.[ch]: api review:
	get_language_by_id -> get_language.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: check-brackets ->
	highlight-matching-brackets

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: api review: highlight ->
	highlight_syntax

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: api review: tabs-width -> tab-width

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourceview.[ch]: introduce a indent-width property
	that decouples the indentation step from the tab-width setting.
	Fixes bug #352847. Based on a patch by Steve Frécinaux.

	* tests/test-widget.c: test the new functionality.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcestylescheme.c: add the "description" property
	and make _gtk_source_style_scheme_get_matching_brackets_style and
	_gtk_source_style_scheme_get_current_line_color private since they are
	just for internal use.

	* gtksourceview/gtksourcebuffer.c: adapt to the above.
	* gtksourceview/gtksourceview.c: ditto.

2007-08-25  Paolo Borelli  <pborelli@katamail.com>
