@@ -63,8 +63,6 @@ gtk_source_view_set_insert_spaces_instead_of_tabs
 gtk_source_view_get_insert_spaces_instead_of_tabs
 gtk_source_view_set_smart_home_end
 gtk_source_view_get_smart_home_end
-gtk_source_view_set_margin
-gtk_source_view_get_margin
 gtk_source_view_set_marker_pixbuf
 gtk_source_view_get_marker_pixbuf
 gtk_source_view_set_highlight_current_line
@@ -73,8 +71,10 @@ gtk_source_view_set_show_line_markers
 gtk_source_view_get_show_line_markers
 gtk_source_view_set_show_line_numbers
 gtk_source_view_get_show_line_numbers
-gtk_source_view_set_show_margin
-gtk_source_view_get_show_margin
+gtk_source_view_set_show_right_margin
+gtk_source_view_get_show_right_margin
+gtk_source_view_set_right_margin_position
+gtk_source_view_get_right_margin_position
 gtk_source_view_set_tab_width
 gtk_source_view_get_tab_width
 <SUBSECTION Standard>
@@ -204,8 +204,6 @@ gtk_source_style_scheme_get_id
 gtk_source_style_scheme_get_name
 gtk_source_style_scheme_get_description
 gtk_source_style_scheme_get_filename
-gtk_source_style_scheme_get_matching_brackets_style
-gtk_source_style_scheme_get_current_line_color
 gtk_source_style_scheme_set_style
 gtk_source_style_scheme_get_style
 <SUBSECTION Standard>
