@@ -1,5 +1,10 @@
 2007-08-27  Paolo Borelli  <pborelli@katamail.com>
 
+	* gtksourceview/gtksourceview.[ch]: api review: margin ->
+	margin-position, show-margin -> show-right-margin.
+
+2007-08-27  Paolo Borelli  <pborelli@katamail.com>
+
 	* gtksourceview/language-specs/html.lang:
 	* gtksourceview/language-specs/php.lang:
 
